gnome shell: fix jump effect on calendar

--- a/Sunrise-Compact-Dark/gnome-shell/gnome-shell.css
+++ b/Sunrise-Compact-Dark/gnome-shell/gnome-shell.css
@@ -634,12 +634,11 @@ StScrollBar StButton#hhandle:active:hover {
 .calendar .calendar-nonwork-day {
   color: #9b9690;
   font-weight: bold;
-  border-bottom-width: 1px;
-  border-top-width: 0;
-  border-left-width: 0;
-  border-right-width: 0;
-  border-color: #1d1a16;
   border-radius: 0 !important;
+  border-width: 2px;
+  border-style: solid;
+  border-color: transparent;
+  box-shadow: inset 0 -1px 0 0 #1d1a16;
 }
 .calendar .calendar-today {
   color: #fff;
