--- a/Sunrise/gnome-shell/gnome-shell.css
+++ b/Sunrise/gnome-shell/gnome-shell.css
@@ -633,12 +633,11 @@ StScrollBar StButton#hhandle:active:hover {
 .calendar .calendar-nonwork-day {
   color: #7b7a79;
   font-weight: bold;
-  border-bottom-width: 1px;
-  border-top-width: 0;
-  border-left-width: 0;
-  border-right-width: 0;
-  border-color: #d2cfcc;
   border-radius: 0 !important;
+  border-width: 2px;
+  border-style: solid;
+  border-color: transparent;
+  box-shadow: inset 0 -1px 0 0 #d2cfcc;
 }
 .calendar .calendar-today {
   color: #fff;
